complete path auto fill

--- a/template.html
+++ b/template.html
@@ -36,6 +36,10 @@
                 width: 90%;
                 margin: 30px auto;
             }
+
+            .paragraph{
+                text-align: justify;
+            }
         </style>
     </head>
     <body>
@@ -76,7 +80,7 @@
             </tr>
 
             <tr>
-                <td colspan="2" align="right" width='90%' class='f12 text' style="font-family: dubaiRegular;">{{paragraph}}</td>
+                <td colspan="2" align="right" width='90%' class='f12 text paragraph' style="font-family: dubaiRegular;">{{paragraph}}</td>
             </tr>
            
             <tr>
